# pyfarm-iot

./: README.md  pyproject.toml
src/pyfarm/iot/: __init__.py  registry.py
src/pyfarm/iot/drivers/: __init__.py  actuators.py  sensors.py
tests/: test_smoke.py
